Интеграция git от github в среду разработки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
                 <string name="all_recordings">All</string>
 
 
+                <string name="somestr">My str</string>
+
+
 </resources>
