Ещё тест синхронизации

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
                 <string name="week_top">Week top</string>
                 <string name="favorite_recordings">Favorite</string>
                 <string name="all_recordings">All</string>
+                <string name="jjj"></string>
 </resources>
